--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ PyJWT==1.7.1
 pylint==2.3.1
 pytest==6.2.2
 python-dateutil==2.8.2
-dotenv==1.0.0
+python-dotenv==1.0.0
 python-jose-cryptodome==1.3.2
 pytz==2019.1
 ruamel.yaml==0.16.5
