--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+python-dotenv @ https://files.pythonhosted.org/packages/44/2f/62ea1c8b593f4e093cc1a7768f0d46112107e790c3e478532329e434f00b/python_dotenv-1.0.0-py3-none-any.whl
 alembic==1.11.1
 aniso8601==6.0.0
 astroid==2.2.5
@@ -35,7 +36,6 @@ PyJWT==1.7.1
 pylint==2.3.1
 pytest==6.2.2
 python-dateutil==2.8.2
-python-dotenv==1.0.0
 python-jose-cryptodome==1.3.2
 pytz==2019.1
 ruamel.yaml==0.16.5
